--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <link rel="alternate" type="application/rss+xml" href="{{ widgets::i18n_url(path="rss.xml") }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{ get_url(path="style.css") }}" type="text/css">
-        <link rel="stylesheet" href="{{ get_url(path="water.css") }}" type="text/css">
+        <link rel="stylesheet" href="{{ get_url(path="water." ~ config.extra.color ~ ".css") }}" type="text/css">
     </head>
     <body>
         <header>
