--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,7 @@
+body {
+    max-width: none; // Override water.css
+}
+
 .nav-menu {
     font-weight: bold;
     > a { margin: 0 1rem; } // Spacing entries
@@ -35,7 +39,7 @@ article > div:first-child {
 }
 
 main {
-    margin: 1rem 0;
+    margin: 1rem auto;
 }
 
 .source {
