--- a/templates/index.html
+++ b/templates/index.html
@@ -8,20 +8,20 @@
         <title>{% block title %}{{ section.title }}{% endblock %}</title>
         <link rel="alternate" type="application/rss+xml" href="{{ widgets::i18n_url(path="rss.xml") }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="{{ get_url(path="style.css") }}" type="text/css">
         <link rel="stylesheet" href="{{ get_url(path="water." ~ config.extra.color ~ ".css") }}" type="text/css">
+        <link rel="stylesheet" href="{{ get_url(path="style.css") }}" type="text/css">
         {%- for stylesheet in config.extra.stylesheets %}
         <link rel="stylesheet" href="{{ get_url(path=stylesheet) }}" type="text/css">
         {%- endfor %}
     </head>
-    <body>
+    <body{% if config.extra.max_width_for == "body" %} style="max-width: {{ config.extra.max_width }}"{% endif %}>
         <header>
             {% set header = get_page(path="_common/header.md") %}
             {{ header.content | markdown | safe }}
             {% if translations %}{{ widgets::translations(translations=translations) }}{% endif %}
             {{ widgets::menu(content="_common/menu.md") }}
         </header>
-        <main>
+        <main{% if config.extra.max_width_for == "main" %} style="max-width: {{ config.extra.max_width }}"{% endif %}>
         {% block main %}
             {{ section.content | markdown | safe }}
         {% endblock %}
