--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,11 @@
         <header>
             {% block header %}
             {% if config.extra.header %}
-            {% set header = get_page(path="_common/header.md") %}
+            {% set header = get_page(path=config.extra.header) %}
             {{ header.content | markdown | safe }}
             {% else %}
-            <h1>A beautiful header</h1>
-            <h2>Point config.extra.header to a Markdown page, or override the header block in your templates.</h2>
+            <h1>Welcome to water theme!</h1>
+            <h2>Please edit config.extra.header, or override the header block in your site templates.</h2>
             {% endif %}
             {% if translations %}{{ widgets::translations(translations=translations) }}{% endif %}
             {% if config.extra.menu %}
