--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
         {% block main %}
             {% if config.extra.home_section %}
                 {% set home_section = config.extra.home_section ~ "/_index.md" %}
-                {{ widgets::section(cur_section=get_section(path=widgets::i18n_path(path=home_section)), full_articles=config.extra.home_fullarticles) }}
+                {{ widgets::section(cur_section=get_section(path=widgets::i18n_path(path=home_section)), full_articles=config.extra.home_fullarticles, title=config.extra.home_sectiontitle) }}
             {% else %}
             {{ section.content | markdown | safe }}
             {% endif %}
