--- a/templates/section.html
+++ b/templates/section.html
@@ -3,5 +3,6 @@
 {% block title %}{{ section.title }}{{ config.extra.title }}{% endblock %}
 
 {% block main %}
-{{ widgets::section(cur_section=section, cur_paginator=paginator) }}
+{# HACK: paginator is not set on transparent sections (i.e. blog/2020/_index.md) #}
+{{ widgets::section(cur_section=section, cur_paginator=paginator|default(value=false)) }}
 {% endblock main %}
