--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,8 @@
 <html class="no-js" lang="{{ lang | default(value=config.default_language)}}">
     <head>
         <meta charset="utf8">{#
-        Block title is shared by homepage and taxonomies but tera will complain taxonomy.name does not exist
-        if we don't default again to something else #}
-        <title>{% block title %}{{ section.title|default(value=taxonomy.name|default(value="")) }}{% endblock %}</title>
+            Don't forget taxonomy titles #}
+        <title>{% block title %}{{ section.title|default(value=taxonomy.name) }}{% endblock %}</title>
         <link rel="alternate" type="application/rss+xml" href="{{ widgets::i18n_url(path="rss.xml") }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{ get_url(path="water." ~ config.extra.color ~ ".css") }}" type="text/css">
