--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
         <meta charset="utf8">{#
             Don't forget taxonomy titles #}
         <title>{% block title %}{{ section.title|default(value=taxonomy.name) }}{% endblock %}</title>
-        <link rel="alternate" type="application/rss+xml" href="{{ widgets::i18n_url(path="rss.xml") }}">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        {% if generate_rss %}<link rel="alternate" type="application/rss+xml" href="{{ widgets::i18n_url(path="rss.xml") }}">
+        {% endif %}<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{ get_url(path="water." ~ config.extra.color ~ ".css") }}" type="text/css">
         <link rel="stylesheet" href="{{ get_url(path="style.css") }}" type="text/css">
         {%- for stylesheet in config.extra.stylesheets %}
