--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,6 +16,9 @@ header {
 article > div:first-child > h1, section > h1:first-child {
     text-align: center;
     font-size: 2.6em;
+    @media screen and (max-width: 64em) {
+        font-size: 1.3em;
+    }
 }
 
 article > div:first-child {
@@ -45,4 +48,8 @@ main {
 .source {
     text-align: center;
     font-weight: bold;
+}
+
+pre {
+    overflow-x: auto;
 }
