Better page/section titles

--- a/templates/page.html
+++ b/templates/page.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block title %}{{ page.title }}{{ config.extra.title }}{% endblock %}
+{% block title %}{{ page.title }} | {{ config.extra.title }}{% endblock %}
 
 {% block main %}
     <article class="h-entry">
