--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,15 @@
                 <a href="{{ browse_url }}/content/{{ cur_path }}">{{ translated }}</a>
             </aside>
             {% endif %}
+            {% if config.extra.altnames %}
+            <aside class="altnames">
+                <p style="text-align: center;">This page is available at the following addresses:
+                {% for base_url, logo in config.extra.altnames %}
+                <br><a href="{{ base_url }}{{ section.path|default(value=page.path|default(value="/"))|safe }}"><img style="width: 1rem; height: 1rem;" src="{{ get_url(path="/networks/" ~ logo) }}"> {{ base_url }}</a>
+                {% endfor %}
+                </p>
+            </aside>
+            {% endif %}
             {% endblock footer %}
         </footer>
     </body>
