--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             {# TAXONOMY PROBLEM (not needed with Zola > 10.1) need to check if lang exists, do not display anything otherwise #}
             {% if lang %}
             {% if config.extra.header and config.extra.header != "disabled" %}{# TAXONOMY: no lang here #}
-            {% set header = get_page(path=widgets::i18n_path(path=config.extra.header, lang=lang)) %}
+            {% set header = get_page(path=widgets::i18n_path(path=config.extra.header)) %}
             {{ header.content | markdown | safe }}
             {% elif config.extra.header != "disabled" %}
             <h1>Welcome to water theme!</h1>
@@ -53,7 +53,7 @@
             {% set cur_path = section.relative_path|default(value=page.relative_path|default(value="")) %}
             {% if config.extra.forge and cur_path %}
             <aside class="source">
-                {% set translated = trans(key="source", lang=lang) %}
+                {% set translated = widgets::t(key="source") %}
                 {% set browse_url = config.extra.forge.browse | trim_end_matches(pat="/") %}
                 <a href="{{ browse_url }}/content/{{ cur_path }}">{{ translated }}</a>
             </aside>
