--- a/templates/widgets.html
+++ b/templates/widgets.html
@@ -91,18 +91,18 @@ Separate entries with a thematic break:
     <a class="u-url" hidden aria-hidden=true href="{{ cur_section.permalink }}">Permalink</a>
     {% set pages = cur_paginator.pages| default(value=cur_section.pages) %}
     {% if pages|length < 1 %}
-        <center><h2>{{ trans(key="nothing_yet", lang=lang) }}</h2></center>
+        <center><h2>{{ self::t(key="nothing_yet") }}</h2></center>
     {% endif %}
     {% for page in pages %}
         <article>
             <div>
                 <a class="u-url" href="{{ page.permalink }}"><h2>{{ page.title }}</h2></a>
-                {%- if page.date -%}<time class="dt-published" datetime="{{ page.date }}">📅&nbsp;{{ page.date | date(format=trans(key="dateFormat", lang=lang)) }}</time>{%- endif -%}
+                {%- if page.date -%}<time class="dt-published" datetime="{{ page.date }}">📅&nbsp;{{ page.date | date(format=self::t(key="dateFormat")) }}</time>{%- endif -%}
             </div>
             {% if page.summary %}
             <div class="p-summary e-content">
             {{ page.summary | markdown | safe }}
-            <a class="read-more" href="{{ page.permalink }}">--> {{ trans(key="readmore", lang=lang) }} <--</a>
+            <a class="read-more" href="{{ page.permalink }}">--> {{ self::t(key="readmore") }} <--</a>
             </div>
             {% elif full_articles %}
             <div class="e-content">
@@ -114,12 +114,19 @@ Separate entries with a thematic break:
     {% if cur_paginator and cur_paginator.number_pagers > 1 %}
     <aside class="pagination">
         {% if cur_paginator.previous %}
-            <a href="{{ cur_paginator.previous }}"><--&nbsp;&nbsp;{{ trans(key="previousPage", lang=lang) }}</a>
+            <a href="{{ cur_paginator.previous }}"><--&nbsp;&nbsp;{{ self::t(key="previousPage") }}</a>
         {% endif %}
         {% if cur_paginator.next %}
-            <a href="{{ cur_paginator.next }}">{{ trans(key="nextPage", lang=lang) }}&nbsp;&nbsp;--></a>
+            <a href="{{ cur_paginator.next }}">{{ self::t(key="nextPage") }}&nbsp;&nbsp;--></a>
         {% endif %}
     </aside>
     {% endif %}
 </section>
 {% endmacro section %}
+
+{# Translate a string in the current language (lang) by looking
+up a key in the config.extra.translations.lang. These translation
+strings extend (and potentially replace) those of the theme. #}
+{%- macro t(key) -%}
+{{ config.extra.translations[lang][key] }}
+{%- endmacro t -%}
