section macro works with taxonomies + config extra.section_fullarticles

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,8 @@
         {% block main %}
         {# TAXONOMY: Please override me or i will crash your site #}
             {% if config.extra.home_section %}
-                {% set home_section = config.extra.home_section ~ "/_index.md" %}
-                {{ widgets::section(cur_section=get_section(path=widgets::i18n_path(path=home_section)), full_articles=config.extra.home_fullarticles, title=config.extra.home_title) }}
+            {% set home_section = config.extra.home_section ~ "/_index.md" %}{% set i18n_home_section = get_section(path=widgets::i18n_path(path=home_section)) %}
+                {{ widgets::section(cur_section=i18n_home_section, full_articles=config.extra.home_fullarticles, title=config.extra.home_title, cur_pages=i18n_home_section) }}
             {% else %}
             {% if config.extra.home_title %}<h1 class="p-name">{{ section.title }}</h1>{% endif %}
             {{ section.content | markdown | safe }}
