--- a/templates/page.html
+++ b/templates/page.html
@@ -7,7 +7,7 @@
         <div>
             <h1 class="p-name">{{ page.title }}</h1>
             <a class="u-url" hidden aria-hidden="true" href="{{ page.permalink }}">Permalink</a>
-            {%- if page.date -%}<time class="dt-published" datetime="{{ page.date }}">📅&nbsp;{{ page.date | date(format=trans(key="dateFormat")) }}</time>{%- endif -%}
+            {%- if page.date -%}<time class="dt-published" datetime="{{ page.date }}">📅&nbsp;{{ page.date | date(format=widgets::t(key="dateFormat")) }}</time>{%- endif -%}
         </div>
         <div class="e-content">{{ page.content | safe }}</div>
     </article>
