--- a/templates/widgets.html
+++ b/templates/widgets.html
@@ -80,8 +80,9 @@ Separate entries with a thematic break:
 {# Need to use separate names for variables, otherwise the paginator
    collides with that of index.html. Also, full_articles and section_title
    are useful to home section #}
-{% macro section(cur_section, cur_paginator=false, full_articles=true, title=true) %}
+{% macro section(cur_section=false, cur_paginator=false, full_articles=true, title=true, cur_pages) %}
 <section class="h-feed">
+{% if cur_section %}{# Section presentation #}
     {% if title %}
     <h1>
         <span class="p-name">{{ cur_section.title }}</span>{% if cur_paginator and cur_paginator.number_pagers > 1 %} ({{ cur_paginator.current_index }}/{{ cur_paginator.number_pagers }}){% endif %}
@@ -89,9 +90,15 @@ Separate entries with a thematic break:
     {% endif %}
     {# Even if called from a different section (such as homepage), we want the semantic permalink to the collection to match the content #}
     <a class="u-url" hidden aria-hidden=true href="{{ cur_section.permalink }}">Permalink</a>
-    {% set pages = cur_paginator.pages| default(value=cur_section.pages) %}
+{% endif %}{# End of section presentation #}
+    {% set pages = cur_paginator.pages| default(value=cur_pages) %}
     {% if pages|length < 1 %}
         <center><h2>{{ self::t(key="nothing_yet") }}</h2></center>
+    {% endif %}
+    {% if cur_section.content %}
+        <aside>
+            {{ cur_section.content | safe }}
+        </aside>
     {% endif %}
     {% for page in pages %}
         <article>
